Add Tutorial Animation for LE1V

--- a/LE1V.html
+++ b/LE1V.html
@@ -19,6 +19,7 @@
     <br><br><br>
     <p id="status">&nbsp</p>
 
+    <a id="tutor" class="help_a" target="_blank">I don't know how to do</a>
     <hr><br>
     <div>
         <p id="correct" title="Your Correct Count">Correct:</p>
@@ -27,7 +28,7 @@
     </div>
     <br><hr><br>
     <a id="help_a">how to use</a><br><br>
-    <iframe src="help.html"></iframe>
+    <iframe src="help.html?type=LE1V" scrolling="no"></iframe>
 
     <script src="js/basic.js"></script>
     <script src="js/LE1V.js"></script>
