--- a/QE.html
+++ b/QE.html
@@ -27,7 +27,7 @@
     </div>
     <br><hr><br>
     <a id="help_a">how to use</a><br><br>
-    <iframe src="help.html"></iframe>
+    <iframe src="help.html?type=QE"></iframe>
 
     <script src="js/basic.js"></script>
     <script src="js/QE.js"></script>
