--- a/SQR.html
+++ b/SQR.html
@@ -29,7 +29,7 @@
     </div>
     <br><hr><br>
     <a id="help_a">how to use</a><br><br>
-    <iframe src="help.html"></iframe>
+    <iframe src="help.html?type=SQR"></iframe>
 
     <script src="js/basic.js"></script>
     <script src="js/SQR.js"></script>
