--- a/tutorial/LE1V.html
+++ b/tutorial/LE1V.html
@@ -7,11 +7,14 @@
     <link rel="stylesheet" href="../css/animation.css">
     <title>LE1V Tutorial</title>
 </head>
-<body>
+<body onload="main()">
     <br>
+    <button id="close" title="Close and go to next question">Close</button>
     <tutor><label id="x">a</label>x <label id="n1">b</label> = <label id="n2">c</label></tutor>
+    <button id="again" title="Close and go to next question" disabled>Play Again</button>
 
 
+    <script src="../js/basic.js"></script>
     <script src="../js/animation.js"></script>
     <script src="../js/LE1V_tutor.js"></script>
 </body>
