--- a/tutorial/LE1V.html
+++ b/tutorial/LE1V.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="../static/favicon.ico">
+    <title>LE1V Tutorial</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/animation.css">
-    <title>LE1V Tutorial</title>
 </head>
 <body onload="main()">
     <br>
